--- a/src/components/Homepage/Comm_Stats.css
+++ b/src/components/Homepage/Comm_Stats.css
@@ -37,6 +37,15 @@
   color: seagreen;
 }
 
+/* New disclaimer styling */
+.disclaimer {
+  font-size: 0.85rem;
+  color: #666;
+  /* margin-top: -0.5rem; */
+  margin-bottom: 1rem;
+  font-style: italic;
+}
+
 .stats-image {
   flex: 1;
   display: flex;
