--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -1,3 +1,4 @@
+/* Set default styles for HomePage */
 :root {
   --primary-green: #2e8b57;
   --light-green: #8ee4af;
@@ -7,6 +8,7 @@
   --highlight-color: #2e8b57;
 }
 
+/* Main HomePage styles */
 body {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   margin: 0;
@@ -46,12 +48,10 @@ body {
     transform: translateY(0);
   }
 }
-/* Apply the fade-in effect in sequence */
 .waste-app > * {
   opacity: 0;
   animation: fadeIn 1s ease-in-out forwards;
 }
-/* Staggered animation delays */
 .waste-app > *:nth-child(1) { animation-delay: 0.2s; }
 .waste-app > *:nth-child(2) { animation-delay: 0.4s; }
 .waste-app > *:nth-child(3) { animation-delay: 0.6s; }
@@ -59,9 +59,3 @@ body {
 .waste-app > *:nth-child(5) { animation-delay: 1s; }
 
 
-@media (max-width: 768px) {
-  .content-container {
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-}
