--- a/src/pages/IdentifyPage.css
+++ b/src/pages/IdentifyPage.css
@@ -1,9 +1,18 @@
 /* Main IdentifyPage styles */
+.waste-app {
+  min-height: 100vh;
+  background-color: white;
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
 .identify-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-top: 2rem;
+  max-width: 2000px;
+  margin: 0 auto;
 }
 
 .identify-header {
@@ -33,7 +42,6 @@
   color: #166534;
 }
 
-/* Step container for animations */
 .step-container {
   width: 100%;
   display: flex;
