--- a/src/components/ReportDashboard/StatsCards.css
+++ b/src/components/ReportDashboard/StatsCards.css
@@ -1,9 +1,10 @@
 .stats-section {
   display: flex;
   gap: 2.5rem;
-  flex-grow: 1;
   justify-content: flex-start;
-  margin-left: 500px;
+  margin-left: 300px;
+  padding: 1rem;
+  
 }
 
 .stat-card {
@@ -22,19 +23,21 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 0.5rem;
+  margin-left: 1.3rem;
 }
 
 .stat-icon img {
   width: 130px;
   height: auto;
+  padding: 0.3rem;
 }
 
 .stat-value {
-  font-size: 2.8rem;
+  font-size: 2.6rem;
   line-height: 1;
   font-weight: bold;
   color: #14532d;
-  margin: 0.75rem 0;
+  margin: 0.75rem auto;
 }
 
 .stat-value-plus {
